--- a/app/templates/funcionamiento.html
+++ b/app/templates/funcionamiento.html
@@ -26,7 +26,7 @@
                     <h2 id="text3" class="text">Para conocerte un poco mejor, vamos a hablar de ti.</h2>
                     <h2 id="text4" class="text">Te orientaré sobre mis funcionalidades y cómo trabajo.</h2>
                     <h2 id="text5" class="text">Estoy preparado para la exploración con IA.</h2>
-                    <h2 id="text6" class="text">Vamos a explorar tu salud mental mediante imágenes.</h2>
+                    <h2 id="text6" class="text">Vamos a explorar tuy salud mental mediante imágenes.</h2>
                     <h2 id="text7" class="text">Basándome en tus interacciones y respuestas,</h2>
                     <h2 id="text8" class="text">Te evaluaré y diagnosticaré a fondo para lograr entenderte.</h2>
                     <h2 id="text9" class="text">Así que, ¡empecemos! Y no te preocupes, estoy aquí para ayudarte.</h2>
