--- a/app/templates/instruciones.html
+++ b/app/templates/instruciones.html
@@ -19,16 +19,17 @@
     <div class="image-container"></div>
     <div class="container">
         <h2>Instrucciones</h2>
-            <p>Este test tiene como objetivo conocer qué tipo de persona has sido. </p>
-            <p>Para responder, sé honesto contigo mismo y responde cada pregunta de la manera más sincera posible.</p>
-            <p>A continuación, encontrarás una serie de preguntas y algunas imágenes. Las preguntas te ayudarán a describir tus sentimientos y actitudes, y las imágenes pueden servir como estímulo para tus respuestas.</p>
-            <p>No te preocupes si algunas preguntas te parecen extrañas; están incluidas para describir los diferentes aspectos de la personalidad.</p>
-            <p>Intenta responder a todas las preguntas, incluso si no estás totalmente seguro. Es mejor contestar todas para obtener un diagnóstico correcto.</p>
-            <audio id="audioInstructions" autoplay style="display:none;"></audio>
-            <div class="info-childs">
-            <input type="button"   value="Continuar" onclick="animateContainer()">
-            <input type="button"   value="Regresar" >      
-        </div>  
+        <p>El propósito de este proyecto es identificar las posibles afectaciones en base a resultados de exámenes médicos.</p>
+        <p>Se identifican los datos y se generan recomendaciones en base a los resultados.</p>
+        <p>Al momento de completar el análisis de los resultados, tenemos varias interfaces de soporte que dan puntos de interés para los usuarios.</p>
+        <p>En este caso, tenemos varias pestañas que dan soporte; entre las cuales tenemos recomendaciones, tratamientos, historia.</p>
+        <p>En el caso del usuario se guarda un historial para poder identificar posibles afectaciones futuras.</p>
+        <audio id="audioInstructions" autoplay style="display:none;"></audio>
+        <div class="info-childs">
+            <input type="button" value="Continuar" onclick="animateContainer()">
+            <input type="button" value="Regresar">
+        </div>
     </div>
+    
 </body>
 </html>
