--- a/app/templates/funcionamiento.html
+++ b/app/templates/funcionamiento.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags para configuración básica -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Enlaces a archivos CSS -->
     <link rel="stylesheet" href="/app/static/css/stylefuncionamiento.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/stylefuncionamiento.css') }}">
+    
+    <!-- Preconexión para fuentes de Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
+    <!-- Enlaces a archivos JavaScript -->
     <script src="/app/static/js/scriptFuncionamiento.js"></script>    
     <script src="{{ url_for('static', filename='js/scriptFuncionamiento.js') }}"></script>
-
-
+    
+    <!-- Título de la página -->
     <title>Funcionamiento</title>
-
 </head>
 <body>      
+    <!-- Contenido principal de la página -->
     <div class="logimg"></div>
     <div class="container">
         <div class="img"></div>     
-            <div class="content">
-                <div class="card h2" id="text-container">
-                    <h2 id="text1" class="text active">¡Hola! Mi nombre es Evaind. Un gusto conocerte.</h2>
-                    <h2 id="text2" class="text">Voy a ayudarte a evaluar tu salud mental y tu comportamiento.</h2>
-                    <h2 id="text3" class="text">Para conocerte un poco mejor, vamos a hablar de ti.</h2>
-                    <h2 id="text4" class="text">Te orientaré sobre mis funcionalidades y cómo trabajo.</h2>
-                    <h2 id="text5" class="text">Estoy preparado para la exploración con IA.</h2>
-                    <h2 id="text6" class="text">Vamos a explorar tu salud mental mediante imágenes.</h2>
-                    <h2 id="text7" class="text">Basándome en tus interacciones y respuestas,</h2>
-                    <h2 id="text8" class="text">Te evaluaré y diagnosticaré a fondo para lograr entenderte.</h2>
-                    <h2 id="text9" class="text">Así que, ¡empecemos! Y no te preocupes, estoy aquí para ayudarte.</h2>
-                </div>
+        <div class="content">
+            <!-- Contenedor de texto con clases y IDs para animación -->
+            <div class="card h2" id="text-container">
+                <h2 id="text1" class="text active">¡Hola! Mi nombre es ClinicAI.</h2>
+                <h2 id="text2" class="text">Voy a ayudarte a evaluar tu salud.</h2>
+                <h2 id="text3" class="text">Vamos a evaluar los resultados del examen medico realizado.</h2>
+                <h2 id="text4" class="text">Tener una mejor vision de como esta tu salud.</h2>
+                <h2 id="text5" class="text">La evaluacion es hecha pòr una IA.</h2>
+                <h2 id="text6" class="text">Vamos a explorar tu salud mediante tus sintomas.</h2>
+                <h2 id="text7" class="text">Basándome en tus resultados y tu estado fisico,</h2>
+                <h2 id="text8" class="text">Te evaluaré y diagnosticaré a fondo para darte un diagnostico.</h2>
+                <h2 id="text9" class="text">¡empecemos! Vamos a profundizar en tu salud.</h2>
             </div>
+        </div>
+        <!-- Pie de página con formulario -->
         <div class="footer">
             <form action="/principal" method="get">
-                
-            <input type="submit"   value="Aceptar"  > 
+                <input type="submit" value="Aceptar">
             </form>
         </div>
     </div>
 </body>
 </html>
-
