--- a/app/templates/funcionamiento.html
+++ b/app/templates/funcionamiento.html
@@ -23,9 +23,10 @@
 </head>
 <body>      
     <!-- Contenido principal de la página -->
-    <div class="logimg"></div>
+    <img src="../static/img/funciona.gif" alt="Imagen del robot">    
     <div class="container">
-        <div class="img"></div>     
+        <img src="../static/img/loglat.jpeg" width="300">
+
         <div class="content">
             <!-- Contenedor de texto con clases y IDs para animación -->
             <div class="card h2" id="text-container">
@@ -37,7 +38,7 @@
                 <h2 id="text6" class="text">Vamos a explorar tu salud mediante tus sintomas.</h2>
                 <h2 id="text7" class="text">Basándome en tus resultados y tu estado fisico,</h2>
                 <h2 id="text8" class="text">Te evaluaré y diagnosticaré a fondo para darte un diagnostico.</h2>
-                <h2 id="text9" class="text">¡empecemos! Vamos a profundizar en tu salud.</h2>
+                <h2 id="text9" class="text">¡Empecemos! Vamos a profundizar en tu salud.</h2>
             </div>
         </div>
         <!-- Pie de página con formulario -->
