--- a/app/templates/instruciones.html
+++ b/app/templates/instruciones.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <div class="image-container"></div>
+    <img src="../static/img/insth.jpeg" width="600">    
     <div class="container">
         <h2>Instrucciones</h2>
         <p>El propósito de este proyecto es identificar las posibles afectaciones en base a resultados de exámenes médicos.</p>
