--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -42,6 +42,9 @@
                     <p>https://www.youtube.com/watch?v=AoOcKHss94c&ab_channel=IESSecu </p>
                     <p></p>
                 </div>
+                <div class="subcontainer">
+                    <img src="/app/static/img/funciona.gif" alt="image DE LOGOTEM">
+                </div>
             
         </div>
 
@@ -100,11 +103,8 @@
             <div class="subcontainer">
                 <img src="/app/static/img/EVASALUDO.gif" alt="image DE LOGOTEM">
             </div>
-                <div class="evasaludo-container">
-                <img src="/app/static/img/EVASALUDO.gif" alt="image DE LOGOTEM">
-                </div>
             <div class="subcontainer">
-                <img src="/app/static/img/EVASALUDO.gif" alt="image DE LOGOTEM">
+                <img src="/app/static/img/perfdere.gif" alt="image DE LOGOTEM">
             </div>
         </div>    
     </div>
