--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -25,7 +25,7 @@
     <div class="header">
             <div class="test-title">RESULTADOS DEL EXAMEN</div>
             <div class="logo-container">
-            <img src="/app/static/img/TEXTC.png" alt="Logo image">
+            <img src="/app/static/img/loglat.jpeg" alt="Logo image">
             </div>
     </div>
         
@@ -54,7 +54,7 @@
                 <ul style="text-align: left; list-style-type: none; padding: 0;">
                     <li><strong>Nombre:</strong> Ana García</li>
                     <li><strong>Edad:</strong> 32 años</li>
-                    <li><strong>Profesión:</strong> Psicóloga clínica</li>
+                    <li><strong>Genero:</strong> Femenino </li>
                     <li><strong>Intereses:</strong> Psicología, desarrollo personal, tecnología</li>
                 </ul>
             </div>
@@ -101,7 +101,9 @@
 
         <div class="containerderecha">
             <div class="subcontainer">
-                <img src="/app/static/img/EVASALUDO.gif" alt="image DE LOGOTEM">
+                <h3>RECOMENDACIONS</h3>
+                            <p>Siempre busca una segunda opinion</p>
+                            <p></p>
             </div>
             <div class="subcontainer">
                 <img src="/app/static/img/perfdere.gif" alt="image DE LOGOTEM">
