--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -38,9 +38,8 @@
                     <h4></h4>
                 </div>
                 <div class="subcontainer">
-                    <h3>Videos</h3>
-                    <p>https://www.youtube.com/watch?v=AoOcKHss94c&ab_channel=IESSecu </p>
-                    <p></p>
+                    <h3>Videos Recomendados</h3>
+                    <p>--------------></p>
                 </div>
                 <div class="subcontainer">
                     <img src="/app/static/img/funciona.gif" alt="image DE LOGOTEM">
@@ -62,7 +61,7 @@
                     <div class="split-container">
                         <div class="top-section">
                             <h3></h3>
-                            <p>--TEXTO AQUI--</p>
+                            <p>https://www.youtube.com/watch?v=AoOcKHss94c&ab_channel=IESSecu </p>
                         </div>
                         <div class="bottom-section">
                         </div>
@@ -72,12 +71,7 @@
                     <div class="split-container">
                         <div class="top-section">
                             <h3>DIAGNÓSTICO</h3>
-                            {% for etiqueta, diagnostico in diagnosticos %}
-                            <div>
-                                <h2>{{ etiqueta }}</h2>
-                                <p>{{ diagnostico }}</p>
-                            </div>
-                            {% endfor %}
+                            
                         </div>
                         <div class="bottom-section">
                         </div>
@@ -101,8 +95,8 @@
 
         <div class="containerderecha">
             <div class="subcontainer">
-                <h3>RECOMENDACIONS</h3>
-                            <p>Siempre busca una segunda opinion</p>
+                <h3>Proximo Examen</h3>
+                            <p>Se recomienda realizar examenes una vez al año o cada 6 meses</p>
                             <p></p>
             </div>
             <div class="subcontainer">
