--- a/app/templates/principal.html
+++ b/app/templates/principal.html
@@ -37,7 +37,7 @@
     <div class="header">
       <div class="test-title">TEST DE PERSONALIDAD</div>
       <div class="logo-container">
-        <img src="../static/img/TEXTC.png" alt="Imagen del logo">
+        <img src="../static/img/loglat.jpeg" alt="Imagen del logo">
       </div>
     </div>
 
@@ -73,22 +73,19 @@
           </div>
         </div>
       </div>
-
       <!-- Columna Derecha -->
       <div class="right-column">
         <div class="robot-container">
-          <img src="../static/img/EVA.gif" alt="Imagen del robot">
+          <img src="../static/img/perfdere.gif" width="400" >
         </div>
       </div>
-
     </div>
 
     <!-- Sección de Pie de Página -->
     <div class="footer">
-      <form action="/perfil" method="get">
+      <form action="/app/templates/perfil.html" method="get">
         <input type="submit" value="Continuar" onclick="animateContainer()">
       </form>
-      <input type="button" value="Regresar">
     </div>
   </div>
 </body>
