--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="subcontainer">
                     <h3>Videos Recomendados</h3>
-                    <p>--------------></p>
+                    
                 </div>
                 <div class="subcontainer">
                     <img src="../static/img/funciona.gif" alt="Imagen del robot">  
@@ -51,10 +51,10 @@
             <div class="subcontainer">
                 <h3>DATOS DEL USUARIO</h3>
                 <ul style="text-align: left; list-style-type: none; padding: 0;">
-                    <li><strong>Nombre:</strong> Ana García</li>
-                    <li><strong>Edad:</strong> 32 años</li>
-                    <li><strong>Genero:</strong> Femenino </li>
-                    <li><strong>Intereses:</strong> Psicología, desarrollo personal, tecnología</li>
+                    <li><strong>Nombre:</strong> Ariel Guerron</li>
+                    <li><strong>Edad:</strong> 27 años</li>
+                    <li><strong>Genero:</strong> Masculino </li>
+                    <li><strong>Intereses:</strong> Musica, Bailar,Caminatas</li>
                 </ul>
             </div>
                 <div class="subcontainer">
