--- a/app/templates/instruciones.html
+++ b/app/templates/instruciones.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <img src="../static/img/insth.jpeg" width="600">    
-    <div class="container">
+    <div class="container-form">
         <h2>Instrucciones</h2>
         <p>El propósito de este proyecto es identificar las posibles afectaciones en base a resultados de exámenes médicos.</p>
         <p>Se identifican los datos y se generan recomendaciones en base a los resultados.</p>
